<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections_button_text">Upcoming Elections</string>
    <string name="representatives_button_text">Find My Representatives</string>
    <string name="upcoming_elections_text">Upcoming Elections</string>
    <string name="saved_elections_text">Saved Elections</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1_text">Address Line 1</string>
    <string name="address_line_2_text">Address Line 2</string>
    <string name="city">City\n</string>
    <string name="zip">Zip</string>
    <string name="find_my_representatives_text">Find My Representatives</string>
    <string name="my_representatives_text">My Representatives</string>
    <string name="use_my_location_text">Use My Location</string>
    <string name="no_location_permission_msg">"Location permission is required!"</string>
    <string name="current_location_is_not_us_msg">"Current location is not in US!"</string>
    <string name="no_network_or_address_not_found_msg">"No network or address not found!"</string>
    <string name="fail_no_network_msg">"Failed connecting to network!"</string>
    <string name="election_info_text">Election Information: %s</string>
    <string name="voting_location_text">Click heare for voting location</string>
    <string name="no_web_browser_found_msg">"Please install Web Browser!"</string>
    <string name="ballot_information_text">Click here for ballot information</string>
    <string name="follow_election_text">Follow Election</string>
    <string name="unfollow_election_text">Unfollow Election</string>
    <string name="location_required_error_msg">Location service must be enabled!</string>
    <!-- TODO: Add necessary string values -->

</resources>
